# project5

./: README.md  main.py  pyproject.toml  setup.py  testbed.ipynb
.github/workflows/: test.yml
cluster/: kmeans.py  silhouette.py
test/: test_kmeans.py  test_silhouette.py
