[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >= '3.7'",
	"build_helper"
	]
build-backend = "flit_core.buildapi"

[project]
name = 'kmeans_and_silhouette'
authors = [{
	name = 'Some Developer',
	email = 'yellatme@somewhere.net'
	}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
	'numpy',
    'scipy',
    'pytest'
]